--- a/lowess.qmd
+++ b/lowess.qmd
@@ -1,9 +1,18 @@
 ---
 title: "lowess"
 format: html
+execute: 
+  echo: true
 ---
 
-1.  
+```{r}
+#| message: False
+
+library(tidyverse)
+
+```
+
+1.
 
 ```{r}
 set.seed(1)
@@ -44,8 +53,8 @@ custom_estimate <- function(data,y){
   
   x_val <- data[(2*len+1)]
   
-  print(x_val)
-  print(ests)
+  # print(x_val)
+  # print(ests)
   y_est <- ests[1] + ests[2]*x_val
   
   return(cbind('x' = x_val,'y_hat' = y_est))
@@ -75,51 +84,69 @@ customLowess <- function(x, y, f){
   nval <- nrow(neighs)
   neighbours <- neighs[-nval,] |> t()
   d_max <- neighs[nval,] |> t()
+  print((d_max))
   
   #since each row i in neighbours represents the neighbours of 
   # the x_ith point, we can use 1:n to simply get the set of x_is
   
   w_ij <- (1-(abs((1:n)-neighbours)/(d_max %*% rep(1,k)))^3)^3
+  print((w_ij))
   
   full_data <- data.frame('w'= w_ij,neighbours,'x'=x)
   
-  test_xi <- 50
-  test_data <- full_data[test_xi, ]
-  ests_test <- custom_estimate(test_data, y)
-  
-  print(ests_test)  # Your custom regression estimate for x = 50
+  # test_xi <- 50
+  # test_data <- full_data[test_xi, ]
+  # ests_test <- custom_estimate(test_data, y)
+  # 
+  # print(ests_test)  # Your custom regression estimate for x = 50
 
   
 
   
-  out <- apply(X=full_data,MARGIN=1,FUN = custom_estimate, y=y, 
-        simplify=TRUE) |> as.data.frame() |> t()
-
-  }
+  out <- apply(X=full_data,
+               MARGIN=1,
+               FUN = custom_estimate, 
+               y=y, 
+               simplify=TRUE) |> as.data.frame() |> t()
+}
 ```
 
-\
+
 
 3.  
 
 ```{r}
 f <- 0.3
-model_custom <- customLowess(x=x,y=y,f=f)
-model_lowess <- lowess(x=x,y=y,f=f,iter=0)
-print(model_lowess$y[model_lowess$x == 50])  # Compare to lowess()
-{
-  plot(x,y,pch=16,cex=0.5)
-  lines(model_custom, col = 'red',type='l')
-  lines(model_lowess, col ='blue',type='l')
-}
+model_custom <- customLowess(x=x,y=y,f=f) |> as_tibble()
+lo <- lowess(x=x,y=y,f=f,iter=0)$y
+ggplot(data=tibble(x,y), aes(x=x,y=y)) +
+  geom_point() +
+  geom_line(data=model_custom,aes(x=V1,y=V2), colour = "red") +
+  geom_line(aes(y=lo),colour="blue")
+  # geom_smooth(formula = y ~ x, 
+  #             method = "loess",
+  #             colour = "blue",
+  #             method.args = list(degree = 1,
+  #                                span=f,
+  #                                surface="direct",
+  #                                statistics="exact"
+  #                                )
+  #             )
 ```
 
 ```{r}
-{
-plot(x, y, pch = 16, cex = 0.5)
-lines(model_custom, col = 'red', type = 'l', lwd = 2)
-lines(model_lowess, col = 'blue', type = 'l', lwd = 2)
-legend("topright", legend = c("Custom LOWESS", "Built-in LOWESS"),
-       col = c("red", "blue"), lty = 1, lwd = 2)
-}
+# {
+# plot(x, y, pch = 16, cex = 0.5)
+# lines(model_custom, col = 'red', type = 'l', lwd = 2)
+# lines(model_lowess, col = 'blue', type = 'l', lwd = 2)
+# legend("topright", legend = c("Custom LOWESS", "Built-in LOWESS"),
+#        col = c("red", "blue"), lty = 1, lwd = 2)
+# }
+
+#the following is tested to be equivalent
+#loess(formula=y~x,degree=1,span=f)$fitted |> plot()
+#lowess(x,y,f=f,iter=0) |> plot()
+#loess.smooth(x=x,y=y,span=f,evaluation=n) |> plot()
 ```
+
+
